# lisa

lisa/: trace.py
lisa/_assets/kmodules/lisa/: ftrace_events.h  main.c
lisa/analysis/: functions.py  tasks.py
lisa/tests/scheduler/: eas_behaviour.py
tools/analysis/: Cargo.toml  build.rs
tools/analysis/analysis/src/: lib.rs
tools/analysis/src/: arrow.rs  event.rs  eventreq.rs  main.rs  string.rs
tools/analysis/src/analysis/: mod.rs  tasks.rs
tools/analysis/trace-tools/: Cargo.toml
tools/analysis/trace-tools/src/lib/: parquet.rs  print.rs
tools/analysis/traceevent/src/: buffer.rs  cinterp.rs  cparser.rs  header.rs  print.rs
