[package]
name = "lisa-rust-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-async-stream = "0.2"
futures-core = { version = "0.3", default-features = false }
futures = "0.3"
pin-project = "1.0"

serde = { version = "1.0", features = ["derive", "alloc"] }

smartstring = { version = "1.0", features = ["serde"]}

# JSON
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
erased-serde = {version = "0.3"}
schemars = {version = "0.8"}

# Arrow
arrow2_convert = "0.3.2"
arrow2 = {version = "0.14.2", features=["io_ipc", "io_ipc_compression"]}
macro_rules_attribute = "0.1.3"
uuid = {version = "1.2.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]}
paste = "1.0"

# CLI only
clap = { version = "3.0", features = ["derive"] }
memmap = "0.7"
itertools = "0.10"

[target.'cfg(target_arch = "x86_64")'.dependencies]
mimalloc = {version = "0.1", default-features = false }

[build-dependencies]
regex = "1"
glob = "0.3"

[profile.release]
debug = true
strip = "debuginfo"
lto = "fat"
codegen-units = 1

# Static build:
# rustup target add x86_64-unknown-linux-musl
# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-unknown-linux-musl
